Delinquency Petition graphs Up, No data to show
Graphs are up and seem to be pulling from correct data, however there is no data to show.

--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -37,7 +37,7 @@
     <br>
     <div style="text-align: center; font-weight:bold; margin-bottom: 40px; margin-top:40px; font-size: 24px;">
         Juvenile Court provides on-call juvenile officers 24/7/365. 
-        This officer determines the youth’s placement at the time of arrest given specific factors (risk to the community and mental health). 
+        This officer determines the youth's placement at the time of arrest given specific factors (risk to the community and mental health). 
         An objective 20th Judicial District Juvenile Court Detention Risk Assessment is used in this process with a release override if needed.
     </div>
     <br>
@@ -98,64 +98,97 @@
     <br>
     <div style="display: flex; flex-direction: row;">
         <!-- Graph 9 -->
-        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 35px;">
-            <h1>Admissions by Race</h1>
-            <canvas id="adracePieChart" width="400" height="400"></canvas>
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 75px;">
+            <h1>Deliquency Petitions Filed by Race</h1>
+            <canvas id="DelinquencyRaceBarChart" width="400" height="400"></canvas>
         </div>
         <!-- Text 9 -->
-        <div id="adraceText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        <div id="DelinquencyRaceText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <br>
     <div style="display: flex; flex-direction: row;">
         <!-- Graph 10 -->
-        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 40px;">
-            <h1>Admission by Gender</h1>
-            <canvas id="adgenderPieChart" width="400" height="400"></canvas>
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 75px;">
+            <h1>Deliquency Petitions Filed by Gender</h1>
+            <canvas id="DelinquencyGenderBarChart" width="400" height="400"></canvas>
         </div>
         <!-- Text 10 -->
-        <div id="adgenderText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        <div id="DelinquencyGenderText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <br>
     <div style="display: flex; flex-direction: row;">
         <!-- Graph 11 -->
-        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 40px;">
-            <h1>Admissions by Age</h1>
-            <canvas id="adagebarChart" width="400" height="400"></canvas>
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 75px;">
+            <h1>Deliquency Petitions Filed by Age</h1>
+            <canvas id="DelinquencyAgeBarChart" width="400" height="400"></canvas>
         </div>
         <!-- Text 11 -->
-        <div id="adageText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        <div id="DelinquencyAgeText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <br>
     <div style="display: flex; flex-direction: row;">
         <!-- Graph 12 -->
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 35px;">
+            <h1>Admissions by Race</h1>
+            <canvas id="adracePieChart" width="400" height="400"></canvas>
+        </div>
+        <!-- Text 12 -->
+        <div id="adraceText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        </div>
+    </div>
+    <br>
+    <div style="display: flex; flex-direction: row;">
+        <!-- Graph 13 -->
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 40px;">
+            <h1>Admission by Gender</h1>
+            <canvas id="adgenderPieChart" width="400" height="400"></canvas>
+        </div>
+        <!-- Text 13 -->
+        <div id="adgenderText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        </div>
+    </div>
+    <br>
+    <div style="display: flex; flex-direction: row;">
+        <!-- Graph 14 -->
+        <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 40px;">
+            <h1>Admissions by Age</h1>
+            <canvas id="adagebarChart" width="400" height="400"></canvas>
+        </div>
+        <!-- Text 14 -->
+        <div id="adageText" style="flex: 1; font-size: 24px; margin-top: 150px;">
+        </div>
+    </div>
+    <br>
+    <div style="display: flex; flex-direction: row;">
+        <!-- Graph 15 -->
         <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 130px;">
             <h1>SAVRY Levels of Admitted Youth</h1>
             <canvas id="AdRiskPieChart" width="400" height="400"></canvas>
         </div>
-        <!-- Text 12 -->
+        <!-- Text 15 -->
          <div id="adsavryText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
     <div style="display: flex; flex-direction: row;">
-        <!-- Graph 13 -->
+        <!-- Graph 16 -->
         <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 130px;">
             <h1>Participants by Gender</h1>
             <canvas id="DrugGenderPieChart" width="400" height="400"></canvas>
         </div>
-        <!-- Text 13 -->
+        <!-- Text 16 -->
          <div id="DrugGenderText" style="flex: 1; font-size: 24px; margin-top: 120px;">
         </div>
     </div>
     <div style="display: flex; flex-direction: row;">
-        <!-- Graph 14 -->
+        <!-- Graph 17 -->
         <div style="width: 400px; height: 400px; margin-right: 70px; margin-bottom: 130px;">
             <h1>Participants by Race</h1>
             <canvas id="DrugRacePieChart" width="400" height="400"></canvas>
         </div>
-        <!-- Text 14 -->
+        <!-- Text 17 -->
          <div id="DrugRaceText" style="flex: 1; font-size: 24px; margin-top: 150px;">
         </div>
     </div>
@@ -562,6 +595,156 @@
                         labels: DelinquencySchoolLabels,
                         datasets: [{
                             data: DelinquencySchoolValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=DelinquencyRaceDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (response.ok) {
+                var DelinquencyRaceData = await response.json();
+
+                console.log('Received DelinquencyRaceData:', DelinquencyRaceData);
+
+                var DelinquencyRaceLabels = DelinquencyRaceData.map(item => item.delinquencyrace);
+                var DelinquencyRaceValues = DelinquencyRaceData.map(item => item.Count);
+
+                var DelinquencyRaceText = document.getElementById('DelinquencyRaceText');
+                DelinquencyRaceText.innerHTML = DelinquencyRaceData.map(item => `${item.delinquencyrace}: ${item.Count} (${((item.Count / DelinquencyRaceData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyRaceData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyRaceLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, DelinquencyRaceLabels.length - predefinedColors.length)));
+
+                var ctx = document.getElementById('DelinquencyRaceBarChart').getContext('2d');
+                var DelinquencyRaceBarChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: DelinquencyRaceLabels,
+                        datasets: [{
+                            label: 'Delinquency Petitions Filed',
+                            data: DelinquencyRaceValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=DelinquencyGenderDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (response.ok) {
+                var DelinquencyGenderData = await response.json();
+
+                console.log('Received DelinquencyGenderData:', DelinquencyGenderData);
+
+                var DelinquencyGenderLabels = DelinquencyGenderData.map(item => item.delinquencygender);
+                var DelinquencyGenderValues = DelinquencyGenderData.map(item => item.Count);
+
+                var DelinquencyGenderText = document.getElementById('DelinquencyGenderText');
+                DelinquencyGenderText.innerHTML = DelinquencyGenderData.map(item => `${item.delinquencygender}: ${item.Count} (${((item.Count / DelinquencyGenderData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyGenderData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyGenderLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, DelinquencyGenderLabels.length - predefinedColors.length)));
+
+                var ctx = document.getElementById('DelinquencyGenderBarChart').getContext('2d');
+                var DelinquencyGenderBarChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: DelinquencyGenderLabels,
+                        datasets: [{
+                            label: 'Delinquency Petitions Filed',
+                            data: DelinquencyGenderValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+        }
+    });
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=DelinquencyAgeDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (response.ok) {
+                var DelinquencyAgeData = await response.json();
+
+                console.log('Received DelinquencyAgeData:', DelinquencyAgeData);
+
+                var DelinquencyAgeLabels = DelinquencyAgeData.map(item => item.delinquencyage);
+                var DelinquencyAgeValues = DelinquencyAgeData.map(item => item.Count);
+
+                var DelinquencyAgeText = document.getElementById('DelinquencyAgeText');
+                DelinquencyAgeText.innerHTML = DelinquencyAgeData.map(item => `${item.delinquencyage}: ${item.Count} (${((item.Count / DelinquencyAgeData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyAgeData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyAgeLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, DelinquencyAgeLabels.length - predefinedColors.length)));
+
+                var ctx = document.getElementById('DelinquencyAgeBarChart').getContext('2d');
+                var DelinquencyAgeBarChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: DelinquencyAgeLabels,
+                        datasets: [{
+                            label: 'Delinquency Petitions Filed',
+                            data: DelinquencyAgeValues,
                             backgroundColor: backgroundColors
                         }]
                     },
