Filter by year in progress

--- a/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Crimes/Index.cshtml
@@ -14,12 +14,19 @@
 <form asp-page="./Index" method="get">
     <div class="form-actions no-color">
         <p>
-            Find by ID:
+            Find by Juvenile ID:
             <input type="text" name="SearchID" value="@Model.CurrentFilter" />
             <input type="submit" value="Search" class="btn btn-primary" /> |
             <a id="Back_To_List" asp-page="./Index">Back to full List</a>
         </p>
-    </div>
+        <p>
+         <select asp-for="@Model.DateFilter" class="form-control"
+            asp-items="@Model.DateNameSL"> 
+            <option value="">
+               -- All years --
+            </option> 
+         </select>
+        </p>
 </form>
 
 <table class="table">
