--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -578,11 +578,11 @@
                 console.log('Received DelinquencySchoolData:', DelinquencySchoolData);
 
                 var DelinquencySchoolLabels = DelinquencySchoolData.map(item => item.delinquencyschool);
-                var DelinquencySchoolValues = DelinquencySchoolData.map(item => item.Count);
+                var DelinquencySchoolValues = DelinquencySchoolData.map(item => item.count);
 
                 var DelinquencySchoolText = document.getElementById('DelinquencySchoolText');
-                DelinquencySchoolText.innerHTML = DelinquencySchoolData.map(item => `${item.delinquencyschool}: ${item.Count} (${((item.Count / DelinquencySchoolData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
-                `<br>Grand Total: ${DelinquencySchoolData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+                DelinquencySchoolText.innerHTML = DelinquencySchoolData.map(item => `${item.delinquencyschool}: ${item.count} (${((item.count / DelinquencySchoolData.reduce((acc, curr) => acc + curr.count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencySchoolData.reduce((acc, curr) => acc + curr.count, 0)}`;
 
                 // Use predefined colors for the first 5 colors
                 var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencySchoolLabels.length, predefinedColors.length));
@@ -627,11 +627,11 @@
                 console.log('Received DelinquencyRaceData:', DelinquencyRaceData);
 
                 var DelinquencyRaceLabels = DelinquencyRaceData.map(item => item.delinquencyrace);
-                var DelinquencyRaceValues = DelinquencyRaceData.map(item => item.Count);
+                var DelinquencyRaceValues = DelinquencyRaceData.map(item => item.count);
 
                 var DelinquencyRaceText = document.getElementById('DelinquencyRaceText');
-                DelinquencyRaceText.innerHTML = DelinquencyRaceData.map(item => `${item.delinquencyrace}: ${item.Count} (${((item.Count / DelinquencyRaceData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
-                `<br>Grand Total: ${DelinquencyRaceData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+                DelinquencyRaceText.innerHTML = DelinquencyRaceData.map(item => `${item.delinquencyrace}: ${item.count} (${((item.count / DelinquencyRaceData.reduce((acc, curr) => acc + curr.count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyRaceData.reduce((acc, curr) => acc + curr.count, 0)}`;
 
                 // Use predefined colors for the first 5 colors
                 var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyRaceLabels.length, predefinedColors.length));
@@ -677,11 +677,11 @@
                 console.log('Received DelinquencyGenderData:', DelinquencyGenderData);
 
                 var DelinquencyGenderLabels = DelinquencyGenderData.map(item => item.delinquencygender);
-                var DelinquencyGenderValues = DelinquencyGenderData.map(item => item.Count);
+                var DelinquencyGenderValues = DelinquencyGenderData.map(item => item.count);
 
                 var DelinquencyGenderText = document.getElementById('DelinquencyGenderText');
-                DelinquencyGenderText.innerHTML = DelinquencyGenderData.map(item => `${item.delinquencygender}: ${item.Count} (${((item.Count / DelinquencyGenderData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
-                `<br>Grand Total: ${DelinquencyGenderData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+                DelinquencyGenderText.innerHTML = DelinquencyGenderData.map(item => `${item.delinquencygender}: ${item.count} (${((item.count / DelinquencyGenderData.reduce((acc, curr) => acc + curr.count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyGenderData.reduce((acc, curr) => acc + curr.count, 0)}`;
 
                 // Use predefined colors for the first 5 colors
                 var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyGenderLabels.length, predefinedColors.length));
@@ -727,11 +727,11 @@
                 console.log('Received DelinquencyAgeData:', DelinquencyAgeData);
 
                 var DelinquencyAgeLabels = DelinquencyAgeData.map(item => item.delinquencyage);
-                var DelinquencyAgeValues = DelinquencyAgeData.map(item => item.Count);
+                var DelinquencyAgeValues = DelinquencyAgeData.map(item => item.count);
 
                 var DelinquencyAgeText = document.getElementById('DelinquencyAgeText');
-                DelinquencyAgeText.innerHTML = DelinquencyAgeData.map(item => `${item.delinquencyage}: ${item.Count} (${((item.Count / DelinquencyAgeData.reduce((acc, curr) => acc + curr.Count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
-                `<br>Grand Total: ${DelinquencyAgeData.reduce((acc, curr) => acc + curr.Count, 0)}`;
+                DelinquencyAgeText.innerHTML = DelinquencyAgeData.map(item => `${item.delinquencyage}: ${item.count} (${((item.count / DelinquencyAgeData.reduce((acc, curr) => acc + curr.count, 0)) * 100).toFixed(1)}%)`).join('<br>') +
+                `<br>Grand Total: ${DelinquencyAgeData.reduce((acc, curr) => acc + curr.count, 0)}`;
 
                 // Use predefined colors for the first 5 colors
                 var backgroundColors = predefinedColors.slice(0, Math.min(DelinquencyAgeLabels.length, predefinedColors.length));
