--- a/FalknerCountyJuvenileCourt/Pages/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Index.cshtml
@@ -3,8 +3,9 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
+<img id="picture_logo" src="\assets\COUNTY_LOGO_SMALL.png" asp-append-version="true" /> 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>This is the website for the <a href="https://www.faulknercounty.org/government/courts/2nd-div-circuit/juvenile-probation">Faulkner County Juvenile Court's</a> yearly report.</p>
+    <p>This is the website for the <a href="https://www.faulknercounty.org/government/courts/2nd-div-circuit/juvenile-probation">Faulkner County Juvenile Court's</a> yearly report. Here you
+     can find the information about last years juvenile arrest's in Faulkner County.</p>
 </div>
