--- a/FalknerCountyJuvenileCourt/Pages/Index.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Index.cshtml
@@ -3,9 +3,15 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<img id="picture_logo" src="\assets\COUNTY_LOGO_SMALL.png" asp-append-version="true" /> 
+<div class="header-container">
+    <img id="picture_logo" src="\assets\COUNTY_LOGO_SMALL.png" asp-append-version="true" /> 
+    <h1>Faulkner County Annual Juvenile Report</h1>
+</div>
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
     <p>This is the website for the <a href="https://www.faulknercounty.org/government/courts/2nd-div-circuit/juvenile-probation">Faulkner County Juvenile Court's</a> yearly report. Here you
-     can find the information about last years juvenile arrest's in Faulkner County.</p>
+     can find the information about last years juvenile arrest's in Faulkner County. Faulkner County Juvenile Court mission statement is 
+     “To provide intervention to court-involved youth to prevent future delinquency, rehabilitate the juvenile, and empower the family to 
+     encourage positive, appropriate behaviors that will help the youth of our community to contribute to society on into adulthood.”​</p>
 </div>
